--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "umd:main": "dist/vue-virtual-cascader.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name vue-virtual-cascader packages/index.js",
+    "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name vue-virtual-cascader packages/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
     "throttle-debounce": "^5.0.0",
-    "vue": "^2.6.14",
     "vue-virtual-scroller": "^1.1.2"
+  },
+  "peerDependencies": {
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
