feat: 优化打包方式,将element-ui和vue-virtual-scroller排除

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vue-virtual-cascader",
-  "version": "0.1.1",
+  "version": "1.0.3",
   "private": false,
-  "main": "dist/vue-virtual-cascader.umd.js",
+  "main": "dist/vue-virtual-cascader.umd.min.js",
   "umd:main": "dist/vue-virtual-cascader.umd.min.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --force",
     "build": "vue-cli-service build",
     "build:lib": "vue-cli-service build --target lib --name vue-virtual-cascader packages/index.js",
     "lint": "vue-cli-service lint"
@@ -13,7 +13,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "throttle-debounce": "^5.0.0",
-    "vue-virtual-scroller": "^1.1.2"
+    "vue-virtual-scroller": "^1.1.2",
+    "element-ui": "^2.15.13"
   },
   "peerDependencies": {
     "vue": "^2.6.14"
@@ -27,7 +28,6 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-component": "^1.1.1",
-    "element-ui": "^2.15.13",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
