--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "vue-virtual-cascader",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": false,
   "main": "dist/vue-virtual-cascader.umd.min.js",
   "umd:main": "dist/vue-virtual-cascader.umd.min.js",
+  "author": "shenyuan",
+  "description": "支持虚拟滚动的vue2版本的cascader",
   "scripts": {
     "serve": "vue-cli-service serve --force",
     "build": "vue-cli-service build",
