--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "main": "dist/vue-virtual-cascader.umd.min.js",
   "umd:main": "dist/vue-virtual-cascader.umd.min.js",
-  "author": "shenyuan",
+  "author": "shenyuan.will@bytedance.com",
   "description": "支持虚拟滚动的vue2版本的cascader",
   "scripts": {
     "serve": "vue-cli-service serve --force",
