--- a/package.json
+++ b/package.json
@@ -38,5 +38,29 @@
     "mockjs": "^1.1.0",
     "standard-version": "^9.5.0",
     "vue-template-compiler": "^2.6.14"
+  },
+  "standard-version": {
+    "types": [
+      {
+        "type": "feat",
+        "section": "Features"
+      },
+      {
+        "type": "fix",
+        "section": "Bug Fixes"
+      },
+      {
+        "type": "perf",
+        "section": "Performance Improvements"
+      },
+      {
+        "type": "revert",
+        "section": "Reverts"
+      },
+      {
+        "type": "docs",
+        "section": "Documentation"
+      }
+    ]
   }
 }
